2010-12-17  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Implementation einer neuen Methode getBescheidDruckMap() zur Ermittlung
	  der benötigten Parameter zum Befüllen eines Gebührenbescheides.
	  Es sind jedoch noch ein paar fehlende Parameter, bei denen noch unklar
	  ist, woher diese Informationen stammen sollen (siehe `TODO` im Code).

2010-12-16  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/utils/PDFExporter.java: Die Funktionen zum
	  Erstellen von Probenahmeauftrag- und Gebührenbescheid-PDFs haben einen
	  weiteren boolean Parameter erhalten, der bestimmt, ob nach der Erstellung
	  des PDFs ein Druckdialog geöffnet werden soll. Außerdem geben diese
	  Funktionen nun ein befülltes JasperPrint Objekt zurück.

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Nach Erstellung von Probenahmeauftrag- und Gebührenbescheid-PDF wird ein
	  Druckdialog geöffnet, in dem die PDFs gedruckt werden können.

2010-12-15  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/AnalyseProcessor.java: Die Funktion
	  process() gibt bei erfolgreichem Persistieren nun True zurück, falls das
	  Persistieren fehlgeschlagen ist, wird False zurückgeliefert.

	* src/de/bielefeld/umweltamt/aui/module/AnalyseImport.java: Nach dem
	  Importieren der Daten (speichern in die Datenbank) wird ein Dialog
	  geöffnet, das den Nutzer über die Anzahl der erfolgreich importierten
	  Zeilen der Analyseergebnisse informiert.

2010-12-15  Ingo Weinzierl <ingo@intevation.de>

	* build.xml: Neues Target zum Compilieren von JasperReports Templates. Die
	  Targets `compile` und `run` hängen von diesem ab, damit die Templates
	  nicht während der Lauftzeit übersetzt werden müssen.

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Die Knöpfe zum Drucken eines Probenahmeauftrags und Gebührenbescheids